# Master-internship-repo-at-Institut-dAlembert

./: CMakeLists.txt  readme.md  requirements.txt
Cpp/: plan_for_cpp.md
Streamlit/: start_up.md
Wavelet/: test1.py
Week1/: first_task1.ipynb  first_task1.py
Week10/: debugging_viscoelastic.ipynb  one_branch_euler_backward.ipynb
Week11/: Zener_Kelvin.py  generalized_Maxwell_backward_Euler.ipynb  question.md  task.md
Week12/: Bugnicourt_2017_generalized_Zener.ipynb  Maxwell_one_branch.py  Multi_branchs_generalized_Maxwell.py  animation_Maxwell_one_branch.py  animation_temple.py  question.md  test_Maxwell_one_branch.py  test_Maxwell_one_branch_no_use.py
Week13/: How_to_git_Tamaas.md  Multi_branches_generalized_Maxwell.py  Multi_branchs_generalized_Maxwell.py  Tamaas.md  discussion_and_task.md  new_discussion_26_04.md  question.md  slope_auxiliary_line.py  slope_auxiliary_line_no_use.py  three_branch_Maxwell.ipynb
Week14/: development_standard_tamaas.md  maxwell_viscoelastic.hh
Week15/: .clang-format  clang-format_installation.md  maxwell_viscoelastic.cpp  maxwell_viscoelastic.hh
Week16/: container_in_tamaas.md  tamaas_structure.md
Week17/: Johnson_analysis.ipynb  tamaas_loops.md  task_list.md
Week18/: Ac_10seconds.npy  Johnson_analysis.ipynb  three_elements_Generalized_Maxwell.py
Week19/: random_surface_for_concours.py
Week2/: Boussinesq solution.ipynb  Week2_update_task.md  task1.ipynb  task1_Hertz_contact.ipynb  task1_test_forrier_no_use.py  task2_Boussinesq_solution.ipynb  task2_constant_stain_rate.ipynb  task_Monday.md  test_for_task1.py
Week20/: Ac_10seconds.npy  Jalocha_2015_generalized_maxwell_model.md  Johnson_analysis.ipynb  choose_parameter.ipynb  pressure_distributions_10seconds.npy  random_rough_viscoelastic.py
Week21/: maxwell_viscoelastic.cpp  maxwell_viscoelastic.hh  meeting.md  test_tamaa.ipynb  test_tamaas.ipynb  test_tamaas_viscoelastic.ipynb
Week22/: PMMA_contact_with_const_loading.ipynb  PMMA_contact_with_const_loading_Lucas.ipynb  test_reset.ipynb
Week23/: spectrum_fit_method.ipynb
Week24/: Ac_tamaas.npy  Ac_tamaas_bigger.npy  Ac_tamaas_delta.npy  aging_rate_analysis.ipynb  characteristic_time_spectrum.ipynb  contact_area.npy
Week25/: 5_loaidng_beta_VS_load_or_area.ipynb  Ac_tamaas.npy  Ac_tamaas_W16.0.npy  Ac_tamaas_W2.0.npy  Ac_tamaas_W24.0.npy  Ac_tamaas_W32.0.npy  Ac_tamaas_W48.0.npy  Ac_tamaas_W64.0.npy  Ac_tamaas_W8.0.npy  aging_rate_analysis.ipynb  contact_area.npy  finer_surface.npy  more_rough_surface.npy  more_rough_surface.py  result.ipynb  surface.npy  test_threads.txt  threads_test.py
Week26/: L2_norm_n_1024.ipynb  L2_norm_n_512.ipynb  L2_norm_with_normalization_no_use.ipynb  delta_t_c_for_surface_discretization.ipynb  test.ipynb
Week3/: Contact between rough surfaces.md  Question.md  Week3_update_task.md  algorithm1.py  fix.py  fix_fft.py  hertz_reference.py  task1_variation_approach.ipynb  task1_variation_approach_FEniCSx.ipynb  task2_random_roughness.ipynb  test.py  test_FEniCSx.py  test_no_use.py  tips_for_scientific_paper.md
Week4/: Question.md  algorithm2.md  algorithm2.py  phi_q_example.py  task_list.md  test.py  (+1 more)
(+79 files in other folders)
